// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Detail page components test renders SubTitle component 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 10,
      },
    ]
  }
  virtual={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "backgroundColor": "#fff",
          "color": "#be1f57",
          "fontSize": 16,
          "padding": 10,
        },
      ]
    }
    uppercase={false}
    virtual={undefined}
  >
    hello
  </Text>
</View>
`;

exports[`Detail page components test renders bold component 1`] = `
<View
  style={Object {}}
  virtual={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "bold",
        },
      ]
    }
    uppercase={false}
    virtual={undefined}
  >
    hello
  </Text>
</View>
`;

exports[`Detail page components test renders paragraph component 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginBottom": 10,
      "marginLeft": 10,
      "marginRight": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "alignSelf": "flex-start",
          "bottom": 6,
          "color": "#444444",
          "fontSize": 13,
          "letterSpacing": 1,
          "marginBottom": 7,
          "marginRight": 10,
          "marginTop": 5,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
    uppercase={false}
    virtual={undefined}
  >
    hello
  </Text>
</View>
`;

exports[`Detail page components test renders title component 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "backgroundColor": "#fdecf3",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginBottom": 10,
      },
    ]
  }
  virtual={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "backgroundColor": "#fdecf3",
          "color": "#be1f57",
          "fontSize": 17,
          "fontWeight": "bold",
          "padding": 10,
        },
      ]
    }
    uppercase={false}
    virtual={undefined}
  >
    hello
  </Text>
</View>
`;
